@@ -1,3 +1,7 @@
+2010-10-14  Sancho Lerena <slerena@artica.es>
+
+	* util/pandora_manage.pl: Removed some warnings.
+
 2010-10-13  Sancho Lerena <slerena@artica.es>
 
     * Core.pm: Force XML::Simple to use XML::Parser instead SAX to manage XML
